# loci-extract

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DESIGN_DECISIONS.md  Dockerfile  Dockerfile.gpu  EXTRACT_SPEC.md  FINANCIAL_STATEMENTS_SPEC.md  README.md  SPEC_PATCH_V3.md  TAX_DETECTION_SPEC.md  compose.gpu-passthrough.yaml  compose.gpu.yaml  compose.prod.yaml  compose.yaml  pyproject.toml  w2extract_spec.md
.github/workflows/: ci.yml  deploy.yml  publish-gpu.yml  publish.yml
app/: __init__.py  capabilities.py  chunking.py  main.py  normalization.py  ocr.py  review.py  router.py  schemas.py
app/classification/: __init__.py  base.py  donut_classifier.py  layout.py  routing.py  rules.py
app/extractors/: __init__.py  base.py  docx.py  image_ocr.py  pdf.py  plaintext.py  vlm.py  xlsx.py
app/llm/: __init__.py  client.py  config.py
app/ocr_backends/: __init__.py  paddleocr_backend.py  tesseract_backend.py
app/profiles/: __init__.py  financial.yaml  general.yaml  loader.py  receipt.yaml  schema.py  tax.yaml  vlm-fast.yaml  vlm.yaml
app/static/: index.html
app/structured/: __init__.py  base.py  common.py  financial_statement.py  form_1099_nec.py  receipt.py  router.py  tax_return_package.py  w2.py
docs/: architecture.md  integrations.md  local-models.md  review-workflow.md  tax-ingestion.md
docs/plans/: 2026-04-03-tax-ingestion-wave-1.md
loci_extract/: __init__.py  boundary_detector.py  chunker.py  cli.py  core.py  core_chunked.py  detector.py  extractor.py  llm.py  ocr.py  prompts.py  sanitizer.py  schema.py  verifier.py  vision.py  xlsx.py
loci_extract.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
loci_extract/api/: server.py
loci_extract/formatters/: __init__.py  csv_fmt.py  json_fmt.py  lacerte_fmt.py  txf_fmt.py
loci_extract/webapp/static/: index.html
scripts/: docker-entrypoint.sh  scrape-irs-bulletins.py  scrape-irs-forms.py  warm-gpu-models.sh
tests/: conftest.py  test_api.py  test_boundary_detector.py  test_capabilities_and_ocr.py  test_chunker.py  test_classification.py  test_cli.py  test_core.py  test_core_financial.py  test_detector.py  test_detector_full.py  test_extract_api.py  test_extract_compare.py  test_extract_text.py  test_formatters.py  test_health.py  test_llm_parse.py  test_ocr_backends.py  test_ocr_rotation.py  test_profiles.py  test_prompts_family.py  test_real_fixtures.py  test_sanitizer.py  test_schema.py  test_structured_api.py  test_structured_extractors.py  test_structured_financial.py  test_verifier.py  test_vlm_trace.py  test_xlsx.py
tests/fixtures/: A1. Unadjusted P&L 2025.xlsx  A2. Unadjusted BS 2025.xlsx  SAMPLE GL.xlsx  __init__.py
tests/fixtures/golden/: sample_w2.json
